--- a/AddressBookApp/html_files/AddPerson.html
+++ b/AddressBookApp/html_files/AddPerson.html
@@ -17,5 +17,12 @@
             </div>
         </div>
     </header>
+    <div class="form-content">
+        <form class="form " action="#" onadd="save();return false">
+            <div class="form-head">
+                PERSON ADDRESS FORM        
+            </div>
+        </form>
+    </div>        
 </body>
 </html>
