--- a/AddressBookApp/html_files/AddPerson.html
+++ b/AddressBookApp/html_files/AddPerson.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="../css_files/AddPerson.css">
     <title>Address Book</title>
 </head>
+
 <body>
     <header class="header-content header">
         <div class="logo-content">
@@ -20,9 +22,63 @@
     <div class="form-content">
         <form class="form " action="#" onadd="save();return false">
             <div class="form-head">
-                PERSON ADDRESS FORM        
+                PERSON ADDRESS FORM
+            </div>
+            <div class="row-content">
+                <label for="name" class="label text"></label>
+                <input type="text" class="input" id="name" name="name" placeholder="full Name.." required>
+                <error-output for="text" class="text-error"></error-output>
+            </div>
+            <div class="row-content">
+                <label for="address" class="label text"></label>
+                <input type="text" class="input" id="address" name="address" placeholder="Address.." required
+                    style="height: 100px;">
+                <error-output for="text" class="text-error"></error-output>
+            </div>
+            <div class="row-content">
+                <label for="address" class="label text"></label>
+                <div>
+                    <select id="city" name="city">
+                        <option>Select City</option>
+                        <option value="Agra">Agra</option>
+                        <option value="Bangalore">Bangalore</option>
+                        <option value="Chandigarh">Chandigarh</option>
+                        <option value="Chennai">Chennai</option>
+                        <option value="Dehradun">Dehradun</option>
+                        <option value="Hyderabad">Hyderabad</option>
+                        <option value="Jaipur">Jaipur</option>
+                        <option value="Lucknow">Lucknow</option>
+                        <option value="Mangalore">Mangalore</option>
+                        <option value="Mumbai">Mumbai</option>
+                        <option value="Mysore">Mysore</option>
+                        <option value="Noida">Noida</option>
+                        <option value="Pune">Pune</option>
+                        <option value="Ranchi">Ranchi</option>
+                        <option value="Roorkee">Roorkee</option>
+                        <option value="Udaipur">Udaipur</option>
+                    </select>
+                    <select id="state" name="state">
+                        <option>Select State</option>
+                        <option value="Jharkhand">Jharkhand</option>
+                        <option value="Karnataka">Karnataka</option>
+                        <option value="Maharastra">Maharastra</option>
+                        <option value="Punjab">Punjab</option>
+                        <option value="Rajasthan">Rajasthan</option>
+                        <option value="Tamil Nadu">Tamil Nadu</option>
+                        <option value="Telangana">Telangana</option>
+                        <option value="Uttarakhand">Uttarakhand</option>
+                        <option value="Uttar Pradesh">Uttar Pradesh</option>
+                    </select>
+                    <input type="text" class="input-code" id="zipcode" name="zipcode" placeholder="Zip Code.." required>
+                </div>
+            </div>
+            <div class="row-content">
+                <label for="phonenumber" class="label text"></label>
+                <input type="text" class="input" id="phonenumber" name="address" placeholder="Phone Number.." required>
+                <error-output for="text" class="text-error"></error-output>
             </div>
         </form>
-    </div>        
+    </div>
 </body>
+
 </html>
