Added:To add Buttons in the Address Book Form Page

--- a/AddressBookApp/html_files/AddPerson.html
+++ b/AddressBookApp/html_files/AddPerson.html
@@ -113,6 +113,13 @@
                 });
                 console.log(number);
             </script>
+            <div class="button-parent">
+                <a href="./AddressBook.html" class="resetButton button cancelButton">Cancel</a>
+                <div class="submit-reset">
+                    <button class="button submitButton" type="submit">Submit</button>
+                    <button type="reset" class="button resetButton">Reset</button>
+                </div>
+            </div>
         </form>
     </div>
 </body>
