--- a/AddressBookApp/html_files/AddPerson.html
+++ b/AddressBookApp/html_files/AddPerson.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css_files/AddPerson.css">
+    <script type="text/javascript" src="../js_files/AddressBook.js"></script>
     <title>Address Book</title>
 </head>
 
