--- a/AddressBookApp/html_files/AddPerson.html
+++ b/AddressBookApp/html_files/AddPerson.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <div class="form-content">
-        <form class="form " action="#" onadd="save();return false">
+        <form class="form " action="#" onsubmit="save();">
             <div class="form-head">
                 PERSON ADDRESS FORM
             </div>
@@ -70,26 +70,14 @@
                         <option value="Uttarakhand">Uttarakhand</option>
                         <option value="Uttar Pradesh">Uttar Pradesh</option>
                     </select>
-                    <input type="text" class="input-code" id="zipcode" name="zipcode" placeholder="Zip Code.." required>
+                    <input type="number" class="input-code" id="zipcode" name="zipcode" placeholder="Zip Code.." required>
                 </div>
             </div>
             <div class="row-content">
                 <label for="number" class="label text"></label>
                 <input type="text" class="input" id="number" name="number" placeholder="Phone Number..">
                 <error-output for="number" class="number-error"></error-output>
-            </div>
-            <script>
-                const number = document.querySelector('#number');
-                const numbererror = document.querySelector('.number-error');
-                number.addEventListener('input', function () {
-                    let numberpattern = RegExp('^[+][0-9]{2,}[1-9]{1}[0-9]{9}$');
-                    if (numberpattern.test(number.value))
-                        numbererror.textContent = ' ';
-                    else
-                        numbererror.textContent = 'Number is Incorrect!';
-                });
-                console.log(number);
-            </script>
+            </div> 
             <div class="button-parent">
                 <a href="./AddressBook.html" class="resetButton button cancelButton">Cancel</a>
                 <div class="submit-reset">
