Added:To Reset all the values in the Input fields

--- a/AddressBookApp/html_files/AddPerson.html
+++ b/AddressBookApp/html_files/AddPerson.html
@@ -81,7 +81,7 @@
             <div class="button-parent">
                 <a href="./AddressBook.html" class="resetButton button cancelButton">Cancel</a>
                 <div class="submit-reset">
-                    <button class="button submitButton" type="submit">Submit</button>
+                    <button class="button submitButton" type="submit">Add</button>
                     <button type="reset" class="button resetButton">Reset</button>
                 </div>
             </div>
