--- a/AddressBookApp/html_files/AddressBook.html
+++ b/AddressBookApp/html_files/AddressBook.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0.600;1,500&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css_files/Home_Page.css">
+    <title>Address Book</title>
 </head>
 <body>
-    
+    <header class="header-content header">
+        <div class="logo-content" onclick="location.href='./AddressBook.html'">
+            <img src="../assets/icon/logo.png" alt="Logo">
+            <div>
+                <span class="per-text">ADDRESS</span>
+                <br>
+                <span class="per-text per-address">BOOK</span>
+            </div>
+        </div>
+    </header>    
 </body>
 </html>
