Added:To add Header Content and entry in the Address Book Home Page

--- a/AddressBookApp/html_files/AddressBook.html
+++ b/AddressBookApp/html_files/AddressBook.html
@@ -20,6 +20,14 @@
                 <span class="per-text per-address">BOOK</span>
             </div>
         </div>
-    </header>    
+    </header>
+    <div class="main-content">
+        <div class="header-content sub-main-content">
+            <div class="per-detail-text">
+                Person Details<div class="per-count">10</div>
+            </div>
+            <a class="add-button" href="./AddPerson.html"><img src="../assets/icon/add-24px.svg" alt="Icon">Add Person</a>
+        </div>
+    </div>        
 </body>
 </html>
