--- a/AddressBookApp/html_files/AddressBook.html
+++ b/AddressBookApp/html_files/AddressBook.html
@@ -15,9 +15,9 @@
         <div class="logo-content" onclick="location.href='./AddressBook.html'">
             <img src="../assets/icon/logo.png" alt="Logo">
             <div>
-                <span class="per-text">ADDRESS</span>
+                <span class="per-text">Address</span>
                 <br>
-                <span class="per-text per-address">BOOK</span>
+                <span class="per-text per-address">Book</span>
             </div>
         </div>
     </header>
@@ -28,6 +28,29 @@
             </div>
             <a class="add-button" href="./AddPerson.html"><img src="../assets/icon/add-24px.svg" alt="Icon">Add Person</a>
         </div>
-    </div>        
+        <div class="table-main">
+            <table class="table" id="display">
+                <tr>
+                    <th>Fullname</th>
+                    <th>Address</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Zip Code</th>
+                    <th>Phone Number</th>
+                </tr>
+                <tr>
+                    <td>Narayan</td>
+                    <td>New Villa</td>
+                    <td>Mumbai</td >
+                    <td>Maharastra</td>
+                    <td>456104</td>
+                    <td>9012456701</td>
+                    <td>
+                        <img src="../assets/icon/delete-black-18dp.svg" alt="Delete">
+                        <img src="../assets/icon/create-black-18dp.svg" alt="Edit">
+                    </td>
+                </tr> 
+            </table>
+        </div>
 </body>
 </html>
