Added:To view Person Address Book details from Local Storage in Home Page

--- a/AddressBookApp/html_files/AddressBook.html
+++ b/AddressBookApp/html_files/AddressBook.html
@@ -8,6 +8,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css_files/Home_Page.css">
+    <script type="text/javascript" src="../js_files/Home_page.js"></script>
     <title>Address Book</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
         </div>
         <div class="table-main">
             <table class="table" id="display">
-                <tr>
+                <!-- <tr>
                     <th>Fullname</th>
                     <th>Address</th>
                     <th>City</th>
@@ -49,7 +50,7 @@
                         <img src="../assets/icon/delete-black-18dp.svg" alt="Delete">
                         <img src="../assets/icon/create-black-18dp.svg" alt="Edit">
                     </td>
-                </tr> 
+                </tr>--> 
             </table>
         </div>
 </body>
