--- a/AddressBookApp/html_files/AddressBook.html
+++ b/AddressBookApp/html_files/AddressBook.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css_files/Home_Page.css">
     <script type="text/javascript" src="../js_files/Home_page.js"></script>
+    <script type="text/javascript" src="../js_files/site_properties.js"></script>
     <title>Address Book</title>
 </head>
 <body>
